# models-istio

./: Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: update_releases.yml
cloudcoil/models/istio/: __init__.py
cloudcoil/models/istio/extensions/: v1alpha1.py
cloudcoil/models/istio/networking/: __init__.py  v1.py  v1alpha3.py  v1beta1.py
cloudcoil/models/istio/security/: v1.py  v1beta1.py
cloudcoil/models/istio/telemetry/: v1.py  v1alpha1.py
tests/: test_import.py
